--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,5 +1,6 @@
 {% load static %}
 <header>
+	{% csrf_token %}
 	<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="{% url 'board:index' %}">board</a>
@@ -46,7 +47,7 @@
 				</ul>
 				<ul class="navbar-nav me-2">
 					{% if request.user.is_authenticated %}
-					<div class="nav-link">Welcome {{user.username}}!</div>
+					<div class="nav-link">Welcome [[user.username]]!</div>
 					<li class="nav-item">
 						<a class="nav-link" href="{% url 'users:account' %}"> Account</a>
 					</li>
