--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -47,7 +47,7 @@
 				</ul>
 				<ul class="navbar-nav me-2">
 					{% if request.user.is_authenticated %}
-					<div class="nav-link">Welcome [[user.username]]!</div>
+					<div class="nav-link">Welcome {{user.username}}!</div>
 					<li class="nav-item">
 						<a class="nav-link" href="{% url 'users:account' %}"> Account</a>
 					</li>
