--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,7 +1,11 @@
 {% load static %}
 <header>
 	{% csrf_token %}
-	<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+	<nav
+		id="mainNavbar"
+		class="navbar navbar-expand-md navbar-dark fixed-top bg-dark"
+		style="display: none"
+	>
 		<div class="container-fluid">
 			<a class="navbar-brand" href="{% url 'board:index' %}">board</a>
 
@@ -56,10 +60,10 @@
 					</li>
 					{% else %}
 					<li class="nav-item">
-						<a class="nav-link" href="{% url 'users:login' %}">Login</a>
+						<a id="navLoginButton" class="nav-link" href="">Login</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="{% url 'users:register' %}">Register</a>
+						<a id="navRegisterButton" class="nav-link" href="">Register</a>
 					</li>
 					{% endif%}
 				</ul>
