--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -10,14 +10,14 @@
 	<input type="text" name="last-name" id="last-name-field" />
 
 	<label for="username-field">Username</label>
-	<input type="text" name="username" id="username-field" />
+	<input type="text" name="username" id="register-username-field" />
 
 	<label for="email-field">Email</label>
 	<input type="email" name="email" id="email-field" />
 
 	<label for="password-field">Password</label>
-	<input type="password" name="password" id="password-field" />
-	[[csrfToken.value]]
+	<input type="password" name="password" id="register-password-field" />
+
 	<button type="submit">Submit</button>
 </form>
 
