Fixed cards again, implemented favicon

--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -12,7 +12,7 @@
 	<label for="password-field">Password</label>
 	<input type="password" name="password" id="login-password-field" />
 
-	<button type="submit">Submit</button>
+	<button class="loginSubmit" type="submit">Submit</button>
 </form>
 
 {% endblock content %}
