--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
+		<link rel="stylesheet" href="static/css/main.css" />
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -29,12 +30,12 @@
 		class="d-flex flex-column h-100"
 		style="background-color: rgba(25, 109, 81, 0.336)"
 	>
-		<div>
+		<div class="show">
 			<!-- Navbar -->
 			{% block navbar %} {% include 'partials/_navbar.html' %} {% endblock %}
 			<!-- Content -->
 			<main class="flex-shrink-0">
-				<div class="container">{% block content %}{% endblock %}</div>
+				<div class="container show">{% block content %}{% endblock %}</div>
 			</main>
 			<!-- Footer -->
 			{% block footer %} {% include 'partials/_footer.html' %} {% endblock %}
