--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -18,7 +18,7 @@
 	<label for="password-field">Password</label>
 	<input type="password" name="password" id="register-password-field" />
 
-	<button type="submit">Submit</button>
+	<button class="loginSubmit" type="submit">Submit</button>
 </form>
 
 {% endblock content %}
