working on formatting

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,6 +2,13 @@
 	visibility: hidden;
 } */
 
-.show {
+/* .show {
 	visibility: visible;
+} */
+
+[v-cloak] > * {
+	display: none;
+}
+[v-cloak]::before {
+	content: "Loading…";
 }
