--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,10 @@
 
 		<!-- AXIOS -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.25.0/axios.min.js"></script>
+		<script
+			src="https://kit.fontawesome.com/aa9105dbe1.js"
+			crossorigin="anonymous"
+		></script>
 	</head>
 	<body
 		class="d-flex flex-column h-100"
